--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "fast-xml-parser": "^5.3.7",
     "graphql": "^16.8.1",
     "mongoose": "^6.8.1",
-    "nodemon": "^3.1.3"
+    "nodemon": "^2.0.20"
   }
 }
